<resources>
    <string name="app_name">iDirect</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="phone_number_or_username_or_email_address">Phone number, username or email address</string>
    <string name="forget_login_detail">Forget your login details? Get help sing in</string>
    <string name="captal_or">OR</string>
    <string name="two_factor_auth">Two Factor Authentication</string>
    <string name="verify">Verify</string>
    <string name="codeSendedToNumber">Text code send to ****%s</string>
    <string name="resendCodeAt">Resend code 04:55</string>
    <string name="time_to_resend_code">Resend code %s:%s</string>
    <string name="error">Error</string>
    <string name="incorrect_password">Your password is incorrect</string>
    <string name="try_again">Try Again</string>
    <string name="invalid_two_factor_code">Your code is not valid. Please try again to get a new code</string>
    <string name="Ok">Ok</string>
    <string name="message">Message</string>
    <string name="youre_been_logged_out">You\'re been logged out. please loggin again.</string>
    <string name="unknownError">Unknown error. please try again</string>
    <string name="five_min_ago">5m ago</string>
    <string name="right_now">now</string>
    <string name="hours_ago">%dh ago</string>
    <string name="min_ago">%dm ago</string>
    <string name="month_ago">%d month ago</string>
    <string name="category">Category</string>
    <string name="export_chat">Export chat</string>
    <string name="note">Note</string>
    <string name="SavedMessages">Saved Messages</string>
    <string name="remove">Remove</string>
    <string name="today">Today</string>
    <string name="days_ago">%dd ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="reply_to_their_story">Replied to their story</string>
    <string name="mentioned_you_in_their_story">Mentioned you in their story</string>
    <string name="send_story_from">Send %s\'s story</string>
    <string name="view_photo">View Photo</string>
    <string name="data_not_available">No data available</string>
    <string name="you_reacted_to_their_story">You reacted to their story</string>
    <string name="error_internet_connection">Error in internet connection</string>
    <string name="check_your_network">Please check your network connection</string>
    <string name="mentioned_person_in_your_story">Mentioned %s in your story</string>
    <string name="reply_to_your_story">Replied to your story</string>
    <string name="send_a_sticker">Send a sticker</string>
    <string name="share_a_media">Share a media</string>
    <string name="send_a_like">Send a like</string>
    <string name="send_a_voice">Send a voice</string>
    <string name="you_send_a_voice_message">You send a voice message</string>
    <string name="send_a_voice_message">Send a voice message</string>
    <string name="you_viewed_their_story">You viewed their story</string>
    <string name="new_message">%d new messages</string>
    <string name="more_than_nine_new_message">9+ new messages</string>
    <string name="typing">typing ...</string>
    <string name="reacted_to_your_story">Reacted to your story</string>
    <string name="new_message_with_time">%s %s</string>
    <string name="online">Online</string>
    <string name="active_at">Active %s</string>
    <string name="navigation_drawer_open">Navigartion drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="search">Search</string>
    <string name="start_new_message">Start New Message</string>
    <string name="select_for_start_messaging">Select for start messaging</string>
    <string name="group_name">%s and %d more</string>
    <string name="select_media">Select Media</string>
    <string name="size_kb">%d KB</string>
    <string name="you_must_select_media">You must select media</string>
    <string name="send_a_photo">Send a photo</string>
    <string name="you_share_a_link">You share a link</string>
    <string name="share_a_link">Share a link</string>
    <string name="you_send_user_igtv_video">You send %s\'s IGTV video</string>
    <string name="send_user_igtv_video">Send %s\'s IGTV video</string>
    <string name="you_send_a_profile">You send a profile</string>
    <string name="send_a_profile">Send a profile</string>
    <string name="reacted_to_your_story_with_reaction">Reacted to your story %s</string>
    <string name="you_reacted_to_user_story">You reacted to %s\'s story</string>
    <string name="you_send_a_media">You send a media</string>
    <string name="send_a_media">Send a media</string>
    <string name="you_text">You : %s</string>
    <string name="connecting">Connecting ...</string>
    <string name="waiting_for_network">Waiting for network ...</string>
    <string name="wating">Wating ...</string>
    <string name="send_first_message">Send first message ...</string>
    <string name="page_not_found">Page not found</string>
    <string name="media_expired">Media Expired</string>
    <string name="view_video">View Video</string>
    <string name="packageName">com.sanardev.instagram</string>
    <string name="reply_label">Reply</string>
    <string name="label">Test 1</string>
    <string name="followers">Followers</string>
    <string name="logout">Log Out</string>
    <string name="setting">Setting</string>
    <string name="notifications">Notifications</string>
    <string name="options">Options</string>
    <string name="seen_message">Seen Message</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="logout_message">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="share_story">Share a story</string>
    <string name="invalid_code_validation">Sms code invalid. please enter valid code</string>
    <string name="item_not_supported">Sorry %s is not supported</string>
    <string name="no_direct_found">Start new message with touch pen icon</string>
    <string name="transition_media">media</string>
    <string name="connected">iDirect</string>
    <string name="start_message">Start Message</string>
    <string name="likes_count">%s likes</string>
    <string name="view_all_comments">View all %s comments</string>
    <string name="liked_by">Liked by</string>
    <string name="and">and</string>
    <string name="others_liker_count">%s others</string>
    <string name="comments">Comments</string>
    <string name="reply">Reply</string>
    <string name="emoji_laugh">😂</string>
    <string name="emoji_eye_love">😍</string>
    <string name="post">Post</string>
    <string name="comment_hint">Comment as %s</string>
    <string name="page_is_private">This page is private</string>
    <string name="page_position">%d/%d</string>
    <string name="home">Home</string>
    <string name="direct">Direct</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="your_story">Your story</string>
    <string name="write_message">Message ...</string>
    <string name="reaction_send">Reaction successfully send</string>
    <string name="share_to">Share to</string>
    <string name="send">Send</string>
    <string name="hashtag_not_support">Hash tag not supported in this version</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="k">%sK</string>
    <string name="m">%sM</string>
    <string name="location_not_support">Location not supported in this version</string>
    <string name="bad_password">Invalid Password</string>
    <string name="too_many_tried">Too many tried</string>
    <string name="error_in_unlikepost">Error in unlikePost</string>
    <string name="error_in_like_post">Error in like post</string>
    <string name="error_in_unlike_comment">Error in unlike comment</string>
    <string name="error_in_like_comment">Error in like comment</string>
    <string name="media">Media</string>
    <string name="more">More</string>
    <string name="view_hashtag">View Hashtag</string>
    <string name="view_location">View Location</string>
    <string name="type_something">Type something...</string>
    <string name="view_post">View Post</string>
    <string name="question_response_sent">Sent!</string>
</resources>
